Closed Bug 349457 Opened 18 years ago Closed 18 years ago

[reflow branch] table spacing problems

Categories

(Core :: Layout: Tables, defect)

Other Branch
x86
Windows XP
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: wgianopoulos, Assigned: dbaron)

Details

(Keywords: testcase)

Attachments

(1 file, 1 obsolete file)

The reflow branch fails to display user customized my.yahoo.com pages correctly. The right hand content ends up off the screen to the right. I managed to get this down to a reduced testcase.
Attached file reduced testcase (obsolete) —
Assignee: nobody → dbaron
Keywords: testcase
Summary: [reflow-branch] table spacing problems → [reflow branch] table spacing problems
Attached file simpler testcase
This shows the problem is related to the outer table frame not shrink-wrapping properly when the table has a specified width (even though the inner table frame is).
Attachment #234733 - Attachment is obsolete: true
Fixed on reflow branch.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
And thanks for the report.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: