Override ComputeAutoSize for table outer frames so that they can shrink wrap around the actual size of their contents.  b=349457